Updated page Macro WorkFeatures/fr

--- a/wiki/fr/Macro_WorkFeatures.html
+++ b/wiki/fr/Macro_WorkFeatures.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro WorkFeatures/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+WorkFeatures&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--high" title="Makro ArbeitsFunktionen (87% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro ArbeitsFunktionen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_WorkFeatures.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro WorkFeatures (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--high" title="Macro WorkFeatures (87% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -105,9 +105,7 @@ Macro WorkFeatures
 </ul>
 </center>
 <p><br>
-</p>
-<div class="mw-translate-fuzzy">
-<p><b>Onglet Origin</b>
+<b>Onglet Origin</b>
 </p>
 <table>
 <tbody><tr>
@@ -115,9 +113,8 @@ Macro WorkFeatures
 </td>
 <td>
 <ul><li><b>Onglet Origin</b></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Origin</span>&nbsp;: Cr&eacute;er &agrave; l'origine&nbsp;: un point et l'axe X, Y ou Z ou les plans XZ, XY et YZ. Les axes, point et plans d'origine sont automatiquement cach&eacute;s.</li></ul>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Origin</span>&nbsp;: cr&eacute;er &agrave; l'origine&nbsp;: un point, les axes X, Y et Z, et les plans XY, XZ et YZ. Le point, les axes et les plans d'origine sont directement d&eacute;finis comme cach&eacute;s.</li></ul>
 </td></tr></tbody></table>
-</div>
 <p><b>Onglet Points</b>
 </p>
 <table>
@@ -458,34 +455,34 @@ L'&eacute;paisseur est la largeur du plan de coupe.
 
 <!-- 
 NewPP limit report
-Cached time: 20260117220359
+Cached time: 20260118093446
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.160 seconds
-Real time usage: 0.851 seconds
-Preprocessor visited node count: 730/1000000
+CPU time usage: 0.169 seconds
+Real time usage: 0.223 seconds
+Preprocessor visited node count: 729/1000000
 Post&#8208;expand include size: 25999/2097152 bytes
 Template argument size: 3261/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 21966/5000000 bytes
+Unstrip post&#8208;expand size: 21971/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  517.019      1 -total
-  4.55%   23.544      1 Template:Userdocnavi/fr
-  3.23%   16.711     11 Template:Clear
-  2.21%   11.444      1 Template:Macro/fr
-  1.96%   10.122      1 Template:Navigation_menu_2
-  1.68%    8.686      1 Template:Caption
-  0.64%    3.292     54 Template:KEY
-  0.63%    3.274      1 Template:MenuCommand
-  0.63%    3.267      1 Template:Button
+100.00%  122.876      1 -total
+  4.48%    5.506      1 Template:Userdocnavi/fr
+  3.04%    3.732     54 Template:KEY
+  2.69%    3.301      1 Template:Macro/fr
+  2.63%    3.232     11 Template:Clear
+  2.55%    3.131      1 Template:Navigation_menu_2
+  2.09%    2.566      1 Template:Caption
+  1.39%    1.711      1 Template:Button
+  1.36%    1.677      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54517-0!canonical and timestamp 20260117220358 and revision id 1739716. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54517-0!canonical and timestamp 20260118093446 and revision id 1740031. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
