Updated page Macro WorkFeatures/fr

--- a/wiki/fr/Macro_WorkFeatures.html
+++ b/wiki/fr/Macro_WorkFeatures.html
@@ -174,7 +174,6 @@ Macro WorkFeatures
 <li><b>Case de saisie</b>&nbsp;: saisir la valeur de d&eacute;placement.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Center Planes</span>&nbsp;: Cr&eacute;&eacute; 3 plans (XY, XZ et YZ) au centre des objets s&eacute;lectionn&eacute;s.</li></ul>
 </td></tr></tbody></table>
-<div class="mw-translate-fuzzy">
 <p><b>Onglet Objects</b>
 </p>
 <table>
@@ -183,12 +182,11 @@ Macro WorkFeatures
 </td>
 <td>
 <ul><li><b>Onglet Objects</b></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Bounding Box(es)</span>&nbsp;: Cr&eacute;&eacute; des bo&icirc;tes englobantes autour de chacun des objets s&eacute;lectionn&eacute;s.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Bounding Box</span>&nbsp;: Cr&eacute;&eacute; une bo&icirc;te englobante autour de chacun des objets s&eacute;lectionn&eacute;s.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cylinder</span>&nbsp;: S&eacute;lectionnez d'abord un axe et un point. D&eacute;finissez le diam&egrave;tre et la longueur si n&eacute;cessaire. Cliquez ensuite sur le bouton ... Il va cr&eacute;er un cylindre align&eacute; sur l'axe s&eacute;lectionn&eacute;, avec une des extr&eacute;mit&eacute;s au point s&eacute;lectionn&eacute;.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cube</span>&nbsp;: S&eacute;lectionnez d'abord un axe et un point. D&eacute;finissez les dimensions si n&eacute;cessaire. Cliquez ensuite sur le bouton ... Il va cr&eacute;er un Cube align&eacute; sur l'axe s&eacute;lectionn&eacute;. avec l'une des extr&eacute;mit&eacute;s au point s&eacute;lectionn&eacute;.</li></ul>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Bounding Box(es)</span>&nbsp;: cr&eacute;&eacute; des bo&icirc;tes englobantes autour de chacun des objets s&eacute;lectionn&eacute;s.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Bounding Box</span>&nbsp;: cr&eacute;&eacute; une bo&icirc;te englobante autour de chacun des objets s&eacute;lectionn&eacute;s.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cylinder</span>&nbsp;: s&eacute;lectionnez d'abord un axe et un point. D&eacute;finissez le diam&egrave;tre et la longueur si n&eacute;cessaire. Cliquez ensuite sur le bouton &laquo;&nbsp;...&nbsp;&raquo; Il va cr&eacute;er un cylindre align&eacute; sur l'axe s&eacute;lectionn&eacute;, avec une des extr&eacute;mit&eacute;s au point s&eacute;lectionn&eacute;.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cube</span>&nbsp;: s&eacute;lectionnez d'abord un axe et un point. D&eacute;finissez les dimensions si n&eacute;cessaire. Cliquez ensuite sur le bouton &laquo;&nbsp;...&nbsp;&raquo; Il va cr&eacute;er un Cube align&eacute; sur l'axe s&eacute;lectionn&eacute;. avec l'une des extr&eacute;mit&eacute;s au point s&eacute;lectionn&eacute;.</li></ul>
 </td></tr></tbody></table>
-</div>
 <p><b>Onglet Views</b>
 </p>
 <table>
@@ -453,13 +451,13 @@ L'&eacute;paisseur est la largeur du plan de coupe.
 
 <!-- 
 NewPP limit report
-Cached time: 20260118093454
+Cached time: 20260118093547
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.162 seconds
-Real time usage: 0.191 seconds
-Preprocessor visited node count: 728/1000000
+CPU time usage: 0.126 seconds
+Real time usage: 0.175 seconds
+Preprocessor visited node count: 727/1000000
 Post&#8208;expand include size: 25999/2097152 bytes
 Template argument size: 3261/2097152 bytes
 Highest expansion depth: 5/100
@@ -469,18 +467,18 @@ Unstrip post&#8208;expand size: 21971/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   95.547      1 -total
-  5.65%    5.395      1 Template:Userdocnavi/fr
-  4.69%    4.479      1 Template:Macro/fr
-  3.46%    3.304     54 Template:KEY
-  2.99%    2.861      1 Template:Navigation_menu_2
-  2.62%    2.502      1 Template:Caption
-  2.48%    2.367     11 Template:Clear
-  1.86%    1.775      1 Template:MenuCommand
-  1.33%    1.273      1 Template:Button
+100.00%   87.635      1 -total
+  4.48%    3.926      1 Template:Userdocnavi/fr
+  4.41%    3.864      1 Template:Macro/fr
+  3.27%    2.868     54 Template:KEY
+  2.49%    2.181      1 Template:Navigation_menu_2
+  2.32%    2.030     11 Template:Clear
+  1.93%    1.693      1 Template:Button
+  1.82%    1.599      1 Template:MenuCommand
+  1.62%    1.416      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54517-0!canonical and timestamp 20260118093454 and revision id 1740033. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54517-0!canonical and timestamp 20260118093546 and revision id 1740037. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
