--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -65,7 +65,9 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkImport.svg&amp;filetimestamp=20200618144354&amp;.html" class="mw-file-description"><img src="../File/Std_LinkImport.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkImport.html" title="Std LinkImport">Importovat odkaz</a>: Importuje vybran&eacute; extern&iacute; odkazy.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkImportAll.svg&amp;filetimestamp=20200618144411&amp;.html" class="mw-file-description"><img src="../File/Std_LinkImportAll.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkImportAll.html" title="Std LinkImportAll">Importovat v&scaron;echny odkazy</a>: Importuje v&scaron;echny extern&iacute; odkazy.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_VarSet.svg&amp;filetimestamp=20240705145906&amp;.html" class="mw-file-description"><img src="../File/Std_VarSet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_VarSet.html" title="Std VarSet">Sada prom&#283;nn&yacute;ch</a>: Vytvo&#345;&iacute; sadu vlastnost&iacute;, kter&eacute; lze pou&#382;&iacute;t jako prom&#283;nn&eacute; ve <a href="../Expressions.html" title="Expressions">v&yacute;razech</a>. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
-<h3><span class="mw-headline" id="Additional_tools">Additional tools</span></h3>
+<p><span id="Additional_tools"></span>
+</p>
+<h3><span id="Dopl.C5.88kov.C3.A9_n.C3.A1stroje"></span><span class="mw-headline" id="Dopl&#328;kov&eacute;_n&aacute;stroje">Dopl&#328;kov&eacute; n&aacute;stroje</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMakeGroup.svg&amp;filetimestamp=20240411204129&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMakeGroup.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_LinkMakeGroup&amp;action=edit&amp;redlink=1.html" class="new" title="Std LinkMakeGroup (page does not exist)">Link Group</a>: Creates a group of links.</li></ul>
 <ul><li><a href="../Std_Expressions.html" title="Std Expressions">Expression Actions</a>:</li></ul>
 <dl><dd><ul><li><a href="../Std_Expressions.html#Copy_Selected" title="Std Expressions">Copy Selected</a>: Copies expression data from selected objects to the Clipboard.</li></ul></dd></dl>
@@ -147,13 +149,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118093544
+Cached time: 20260118093710
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.164 seconds
-Real time usage: 0.296 seconds
-Preprocessor visited node count: 548/1000000
+CPU time usage: 0.157 seconds
+Real time usage: 0.260 seconds
+Preprocessor visited node count: 549/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
 Highest expansion depth: 5/100
@@ -163,18 +165,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.214      1 -total
- 39.53%   17.477      1 Template:Std_Base_navi/cs
- 30.22%   13.360      2 Template:Navigation_menu_2
- 18.20%    8.049      1 Template:Userdocnavi/cs
-  8.75%    3.867      1 Template:TOCright
-  8.25%    3.647      8 Template:Version
-  7.73%    3.419      1 Template:StdMenu
-  6.87%    3.037      2 Template:Docnav
-  4.72%    2.088      6 Template:VersionPlus
+100.00%   28.933      1 -total
+ 40.73%   11.784      1 Template:Std_Base_navi/cs
+ 25.43%    7.358      2 Template:Navigation_menu_2
+ 16.66%    4.821      1 Template:Userdocnavi/cs
+  8.97%    2.595      2 Template:Docnav
+  8.38%    2.424      8 Template:Version
+  7.71%    2.230      1 Template:TOCright
+  7.10%    2.055      1 Template:StdMenu
+  6.43%    1.861      6 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118093544 and revision id 1740035. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118093709 and revision id 1740039. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
