--- a/wiki/fr/Macro_WorkFeatures.html
+++ b/wiki/fr/Macro_WorkFeatures.html
@@ -197,7 +197,6 @@ Macro WorkFeatures
 <ul><li><b>Onglet Views</b></li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Align to ...</span>&nbsp;: D&eacute;finit la vue en cours perpendiculairement &agrave; la face s&eacute;lectionn&eacute;e ou align&eacute;e sur l'axe s&eacute;lectionn&eacute;, ou align&eacute;e sur deux points. Cliquez de nouveau sur la m&ecirc;me s&eacute;lection inversera la direction.</li></ul>
 </td></tr></tbody></table>
-<div class="mw-translate-fuzzy">
 <p><b>Onglet Modif.</b>
 </p>
 <table>
@@ -206,18 +205,17 @@ Macro WorkFeatures
 </td>
 <td>
 <ul><li><b>Onglet Modif. Cutting</b></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Object</span>&nbsp;: Apr&egrave;s avoir s&eacute;lectionn&eacute; votre objet et tout d'abord un objet &agrave; couper, cliquez sur le bouton 'Select Object',
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Object</span>&nbsp;: apr&egrave;s avoir s&eacute;lectionn&eacute; votre objet et tout d'abord un objet &agrave; couper, cliquez sur le bouton &laquo;&nbsp;Select Object&nbsp;&raquo;,
 <ul><li>Le nom de l'objet s&eacute;lectionn&eacute; est affich&eacute;</li></ul></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Cut Line</span>&nbsp;: Deuxi&egrave;mement, une ligne de coupe et cliquez sur le bouton 'Select Cut Line',
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Cut Line</span>&nbsp;: deuxi&egrave;mement, une ligne de coupe et cliquez sur le bouton &laquo;&nbsp;Select Cut Line&nbsp;&raquo;,
 <ul><li>Le nom de la ligne s&eacute;lectionn&eacute;e est affich&eacute;</li></ul></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Ref. Plane</span>&nbsp;: Enfin, un plan de r&eacute;f&eacute;rence et cliquez sur 'Select Ref. Plane'!
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Ref. Plane</span>&nbsp;: enfin, un plan de r&eacute;f&eacute;rence et cliquez sur &laquo;&nbsp;Select Ref. Plane&nbsp;&raquo;!
 <ul><li>Le nom du plan s&eacute;lectionn&eacute; est affich&eacute;</li></ul></li>
-<li><b>Angle</b>&nbsp;: Angle de coupe (Defaut: 0.0)</li>
-<li><b>Thickness</b>&nbsp;: &Eacute;paisseur de la coupe (Defaut&nbsp;: 0.0)</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Reset</span>&nbsp;: R&eacute;initialiser les valeurs</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Apply</span>&nbsp;: Appliquer les valeurs</li></ul>
+<li><b>Angle</b>&nbsp;: Angle de coupe (par d&eacute;faut: 0.0)</li>
+<li><b>Thickness</b>&nbsp;: &eacute;paisseur de la coupe (par d&eacute;faut&nbsp;: 0.0)</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Reset</span>&nbsp;: r&eacute;initialiser les valeurs</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Apply</span>&nbsp;: appliquer les valeurs</li></ul>
 </td></tr></tbody></table>
-</div>
 <p><b>Onglet Check.</b>
 </p>
 <table>
@@ -451,13 +449,13 @@ L'&eacute;paisseur est la largeur du plan de coupe.
 
 <!-- 
 NewPP limit report
-Cached time: 20260118093547
+Cached time: 20260118093837
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.126 seconds
-Real time usage: 0.175 seconds
-Preprocessor visited node count: 727/1000000
+CPU time usage: 0.163 seconds
+Real time usage: 0.225 seconds
+Preprocessor visited node count: 726/1000000
 Post&#8208;expand include size: 25999/2097152 bytes
 Template argument size: 3261/2097152 bytes
 Highest expansion depth: 5/100
@@ -467,18 +465,18 @@ Unstrip post&#8208;expand size: 21971/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   87.635      1 -total
-  4.48%    3.926      1 Template:Userdocnavi/fr
-  4.41%    3.864      1 Template:Macro/fr
-  3.27%    2.868     54 Template:KEY
-  2.49%    2.181      1 Template:Navigation_menu_2
-  2.32%    2.030     11 Template:Clear
-  1.93%    1.693      1 Template:Button
-  1.82%    1.599      1 Template:MenuCommand
-  1.62%    1.416      1 Template:Caption
+100.00%  115.241      1 -total
+  4.30%    4.950      1 Template:Macro/fr
+  3.68%    4.239      1 Template:Userdocnavi/fr
+  3.06%    3.530      1 Template:MenuCommand
+  2.83%    3.264     54 Template:KEY
+  2.63%    3.030      1 Template:Caption
+  2.11%    2.429     11 Template:Clear
+  1.98%    2.279      1 Template:Navigation_menu_2
+  1.30%    1.498      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54517-0!canonical and timestamp 20260118093546 and revision id 1740037. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54517-0!canonical and timestamp 20260118093837 and revision id 1740041. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
