--- a/wiki/fr/Macro_WorkFeatures.html
+++ b/wiki/fr/Macro_WorkFeatures.html
@@ -253,12 +253,8 @@ Macro WorkFeatures
 </p><p>Ic&ocirc;ne de la barre d'outils <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=WF_wf.png&amp;filetimestamp=20150308174307&amp;.html" class="mw-file-description"><img src="../File/WF_wf.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b><a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature">T&eacute;l&eacute;chargez la derni&egrave;re version sur GitHub </a></b> , 
 Vous devez d&eacute;compresser l'archive zip et copier tous les fichiers dans votre r&eacute;pertoire Macro.
-</p>
-<div class="mw-translate-fuzzy">
-<p><b>PS&nbsp;: cette macro est toujours en d&eacute;veloppement v&eacute;rifiez de temps en temps pour vous assurer d'avoir la derni&egrave;re version.</b>
-</p>
-</div>
-<p><br>
+</p><p><b>PS&nbsp;: cette macro est encore en cours de d&eacute;veloppement. Veuillez consulter r&eacute;guli&egrave;rement cette page pour vous assurer d'avoir la derni&egrave;re version.</b>
+</p><p><br>
 </p>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_GitHub_00.png&amp;filetimestamp=20160917094640&amp;.html" class="mw-file-description" title="T&eacute;l&eacute;chargez dans GitHub cliquez sur le bouton T&eacute;l&eacute;charger ZIP"><img alt="T&eacute;l&eacute;chargez dans GitHub cliquez sur le bouton T&eacute;l&eacute;charger ZIP" src="../File/Macro_Work_Features_GitHub_00.png" decoding="async" width="640" height="415" class="mw-file-element" data-file-width="1060" data-file-height="687"></a><figcaption>T&eacute;l&eacute;chargez dans GitHub cliquez sur le bouton T&eacute;l&eacute;charger ZIP</figcaption></figure>
 <div style="clear:both"></div>
@@ -449,13 +445,13 @@ L'&eacute;paisseur est la largeur du plan de coupe.
 
 <!-- 
 NewPP limit report
-Cached time: 20260118093837
+Cached time: 20260118093921
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.163 seconds
-Real time usage: 0.225 seconds
-Preprocessor visited node count: 726/1000000
+Real time usage: 0.198 seconds
+Preprocessor visited node count: 725/1000000
 Post&#8208;expand include size: 25999/2097152 bytes
 Template argument size: 3261/2097152 bytes
 Highest expansion depth: 5/100
@@ -465,18 +461,18 @@ Unstrip post&#8208;expand size: 21971/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  115.241      1 -total
-  4.30%    4.950      1 Template:Macro/fr
-  3.68%    4.239      1 Template:Userdocnavi/fr
-  3.06%    3.530      1 Template:MenuCommand
-  2.83%    3.264     54 Template:KEY
-  2.63%    3.030      1 Template:Caption
-  2.11%    2.429     11 Template:Clear
-  1.98%    2.279      1 Template:Navigation_menu_2
-  1.30%    1.498      1 Template:Button
+100.00%  103.740      1 -total
+  6.68%    6.934      1 Template:Macro/fr
+  4.72%    4.898      1 Template:Userdocnavi/fr
+  3.12%    3.232     54 Template:KEY
+  2.69%    2.786      1 Template:Button
+  2.65%    2.746      1 Template:Navigation_menu_2
+  1.80%    1.869     11 Template:Clear
+  1.59%    1.645      1 Template:Caption
+  1.45%    1.506      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54517-0!canonical and timestamp 20260118093837 and revision id 1740041. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54517-0!canonical and timestamp 20260118093921 and revision id 1740043. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
