--- a/wiki/fr/Macro_WorkFeatures.html
+++ b/wiki/fr/Macro_WorkFeatures.html
@@ -258,11 +258,8 @@ Vous devez d&eacute;compresser l'archive zip et copier tous les fichiers dans vo
 </p>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_GitHub_00.png&amp;filetimestamp=20160917094640&amp;.html" class="mw-file-description" title="T&eacute;l&eacute;chargez dans GitHub cliquez sur le bouton T&eacute;l&eacute;charger ZIP"><img alt="T&eacute;l&eacute;chargez dans GitHub cliquez sur le bouton T&eacute;l&eacute;charger ZIP" src="../File/Macro_Work_Features_GitHub_00.png" decoding="async" width="640" height="415" class="mw-file-element" data-file-width="1060" data-file-height="687"></a><figcaption>T&eacute;l&eacute;chargez dans GitHub cliquez sur le bouton T&eacute;l&eacute;charger ZIP</figcaption></figure>
 <div style="clear:both"></div>
-<div class="mw-translate-fuzzy">
 <p>Utilisez le <span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Std_AddonMgr.html" title="Std AddonMgr/fr">Gestionnaire des extensions</a>, <b>Menu &rarr; Outils &rarr; Gestionnaire des extensions</b> pour installer facilement WorkFeatures et d'autres macros int&eacute;ressantes.
-</p>
-</div>
-<p>Ici le tutoriel <a href="../fr/How_to_install_macros.html" title="How to install macros/fr">Comment installer une macro</a>.
+</p><p>Ici le tutoriel <a href="../fr/How_to_install_macros.html" title="How to install macros/fr">Comment installer une macro</a>.
 </p><p><span id="Examples"></span>
 </p>
 <h2><span class="mw-headline" id="Exemples">Exemples</span></h2>
@@ -445,13 +442,13 @@ L'&eacute;paisseur est la largeur du plan de coupe.
 
 <!-- 
 NewPP limit report
-Cached time: 20260118093921
+Cached time: 20260118093935
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.163 seconds
-Real time usage: 0.198 seconds
-Preprocessor visited node count: 725/1000000
+CPU time usage: 0.140 seconds
+Real time usage: 0.171 seconds
+Preprocessor visited node count: 724/1000000
 Post&#8208;expand include size: 25999/2097152 bytes
 Template argument size: 3261/2097152 bytes
 Highest expansion depth: 5/100
@@ -461,18 +458,18 @@ Unstrip post&#8208;expand size: 21971/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  103.740      1 -total
-  6.68%    6.934      1 Template:Macro/fr
-  4.72%    4.898      1 Template:Userdocnavi/fr
-  3.12%    3.232     54 Template:KEY
-  2.69%    2.786      1 Template:Button
-  2.65%    2.746      1 Template:Navigation_menu_2
-  1.80%    1.869     11 Template:Clear
-  1.59%    1.645      1 Template:Caption
-  1.45%    1.506      1 Template:MenuCommand
+100.00%   85.946      1 -total
+  5.21%    4.481      1 Template:Userdocnavi/fr
+  4.45%    3.828      1 Template:Macro/fr
+  3.83%    3.290     54 Template:KEY
+  2.83%    2.436     11 Template:Clear
+  2.54%    2.183      1 Template:Navigation_menu_2
+  1.73%    1.484      1 Template:Button
+  1.64%    1.412      1 Template:Caption
+  1.52%    1.303      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54517-0!canonical and timestamp 20260118093921 and revision id 1740043. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54517-0!canonical and timestamp 20260118093934 and revision id 1740045. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
