--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -68,7 +68,7 @@
 <p><span id="Additional_tools"></span>
 </p>
 <h3><span id="Dopl.C5.88kov.C3.A9_n.C3.A1stroje"></span><span class="mw-headline" id="Dopl&#328;kov&eacute;_n&aacute;stroje">Dopl&#328;kov&eacute; n&aacute;stroje</span></h3>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMakeGroup.svg&amp;filetimestamp=20240411204129&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMakeGroup.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_LinkMakeGroup&amp;action=edit&amp;redlink=1.html" class="new" title="Std LinkMakeGroup (page does not exist)">Link Group</a>: Creates a group of links.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMakeGroup.svg&amp;filetimestamp=20240411204129&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMakeGroup.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_LinkMakeGroup&amp;action=edit&amp;redlink=1.html" class="new" title="Std LinkMakeGroup (page does not exist)">Skupina odkaz&#367;</a>: Vytvo&#345;&iacute; skupinu odkaz&#367;.</li></ul>
 <ul><li><a href="../Std_Expressions.html" title="Std Expressions">Expression Actions</a>:</li></ul>
 <dl><dd><ul><li><a href="../Std_Expressions.html#Copy_Selected" title="Std Expressions">Copy Selected</a>: Copies expression data from selected objects to the Clipboard.</li></ul></dd></dl>
 <dl><dd><ul><li><a href="../Std_Expressions.html#Copy_Active_Document" title="Std Expressions">Copy Active Document</a>: Copies expression data from the active document to the Clipboard.</li></ul></dd></dl>
@@ -149,12 +149,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118093710
+Cached time: 20260118094039
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.157 seconds
-Real time usage: 0.260 seconds
+CPU time usage: 0.167 seconds
+Real time usage: 0.285 seconds
 Preprocessor visited node count: 549/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
@@ -165,18 +165,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.933      1 -total
- 40.73%   11.784      1 Template:Std_Base_navi/cs
- 25.43%    7.358      2 Template:Navigation_menu_2
- 16.66%    4.821      1 Template:Userdocnavi/cs
-  8.97%    2.595      2 Template:Docnav
-  8.38%    2.424      8 Template:Version
-  7.71%    2.230      1 Template:TOCright
-  7.10%    2.055      1 Template:StdMenu
-  6.43%    1.861      6 Template:VersionPlus
+100.00%   45.343      1 -total
+ 34.50%   15.645      1 Template:Std_Base_navi/cs
+ 28.35%   12.856      1 Template:Userdocnavi/cs
+ 24.67%   11.187      2 Template:Navigation_menu_2
+  7.82%    3.544      2 Template:Docnav
+  7.07%    3.204      1 Template:TOCright
+  7.04%    3.191      1 Template:StdMenu
+  5.43%    2.464      6 Template:VersionPlus
+  4.67%    2.119      8 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118093709 and revision id 1740039. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118094039 and revision id 1740049. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
