--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -70,7 +70,7 @@
 <h3><span id="Dopl.C5.88kov.C3.A9_n.C3.A1stroje"></span><span class="mw-headline" id="Dopl&#328;kov&eacute;_n&aacute;stroje">Dopl&#328;kov&eacute; n&aacute;stroje</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMakeGroup.svg&amp;filetimestamp=20240411204129&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMakeGroup.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_LinkMakeGroup&amp;action=edit&amp;redlink=1.html" class="new" title="Std LinkMakeGroup (page does not exist)">Skupina odkaz&#367;</a>: Vytvo&#345;&iacute; skupinu odkaz&#367;.</li></ul>
 <ul><li><a href="../Std_Expressions.html" title="Std Expressions">Akce v&yacute;raz&#367;</a>:</li></ul>
-<dl><dd><ul><li><a href="../Std_Expressions.html#Copy_Selected" title="Std Expressions">Copy Selected</a>: Copies expression data from selected objects to the Clipboard.</li></ul></dd></dl>
+<dl><dd><ul><li><a href="../Std_Expressions.html#Copy_Selected" title="Std Expressions">Kop&iacute;rovat vybran&eacute;</a>: Kop&iacute;ruje data v&yacute;raz&#367; z vybran&yacute;ch objekt&#367; do schr&aacute;nky.</li></ul></dd></dl>
 <dl><dd><ul><li><a href="../Std_Expressions.html#Copy_Active_Document" title="Std Expressions">Copy Active Document</a>: Copies expression data from the active document to the Clipboard.</li></ul></dd></dl>
 <dl><dd><ul><li><a href="../Std_Expressions.html#Copy_All_Documents" title="Std Expressions">Copy All Documents</a>: Copies expression data from all documents to the Clipboard.</li></ul></dd></dl>
 <dl><dd><ul><li><a href="../Std_Expressions.html#Paste" title="Std Expressions">Paste</a>: Pastes expression data from the Clipboard.</li></ul></dd></dl>
@@ -149,12 +149,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118094154
+Cached time: 20260118094221
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.146 seconds
-Real time usage: 0.212 seconds
+CPU time usage: 0.157 seconds
+Real time usage: 0.289 seconds
 Preprocessor visited node count: 549/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
@@ -165,18 +165,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.177      1 -total
- 43.66%   10.556      1 Template:Std_Base_navi/cs
- 24.87%    6.013      2 Template:Navigation_menu_2
- 17.93%    4.336      1 Template:Userdocnavi/cs
-  9.26%    2.238      2 Template:Docnav
-  7.88%    1.904      6 Template:VersionPlus
-  6.24%    1.509      1 Template:StdMenu
-  5.76%    1.392      8 Template:Version
-  4.60%    1.111      1 Template:TOCright
+100.00%   33.212      1 -total
+ 43.67%   14.504      1 Template:Std_Base_navi/cs
+ 28.99%    9.627      2 Template:Navigation_menu_2
+ 20.48%    6.803      1 Template:Userdocnavi/cs
+  9.08%    3.015      2 Template:Docnav
+  6.98%    2.318      1 Template:StdMenu
+  5.84%    1.941      6 Template:VersionPlus
+  5.14%    1.708      1 Template:TOCright
+  4.22%    1.400      8 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118094154 and revision id 1740051. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118094220 and revision id 1740053. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
