Updated page PartDesign SubtractivePipe/fr

--- a/wiki/fr/PartDesign_SubtractivePipe.html
+++ b/wiki/fr/PartDesign_SubtractivePipe.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">PartDesign SubtractivePipe/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-PartDesign+SubtractivePipe&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--high" title="PartDesign Subtraktives Rohr (94% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--complete" title="PartDesign Subtraktives Rohr (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../PartDesign_SubtractivePipe.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="PartDesign SubtractivePipe (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign SubtractivePipe/tr (6% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--med" title="PartDesign Barrido sustractivo (56% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--med" title="PartDesign: Sweep sottrattivo (62% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--high" title="Projekt Cz&#281;&#347;ci: Odejmowanie wyci&#261;gni&#281;ciem wzd&#322;u&#380; &#347;cie&#380;ki (94% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--low" title="Escaneamento subtrativo (6% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
@@ -112,7 +112,6 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li>Pour mieux contr&ocirc;ler la forme du balayage, il est recommand&eacute; que toutes les sections transversales aient le m&ecirc;me nombre de segments. Par exemple, pour un balayage entre un rectangle et un cercle, le cercle doit &ecirc;tre d&eacute;compos&eacute; en 4 arcs connect&eacute;s.</li>
 <li>Vous pouvez cr&eacute;er un balayage &agrave; partir ou en direction d'un seul <a href="../fr/Glossary.html#V" title="Glossary/fr">sommet (vertex)</a> d'une esquisse ou du corps.</li>
 <li>Lorsque vous s&eacute;lectionnez un <a href="../fr/Glossary.html#V" title="Glossary/fr">sommet</a> comme section, il doit dans la plupart des cas &ecirc;tre la derni&egrave;re section du balayage. Vous pouvez modifier l'ordre des sections en les faisant glisser dans la liste.</li>
@@ -121,8 +120,8 @@
 <li>Il peut y avoir des probl&egrave;mes si la section transversale n'est pas perpendiculaire &agrave; la trajectoire en 3D.</li>
 <li>Une section transversale ne peut pas se trouver sur le m&ecirc;me plan que celle qui la pr&eacute;c&egrave;de imm&eacute;diatement.</li>
 <li>Les sections transversales ne doivent pas contenir de boucles disjointes ou crois&eacute;es.</li>
-<li>Si l'esquisse poss&egrave;de une g&eacute;om&eacute;trie int&eacute;rieure, l'ordre dans lequel la g&eacute;om&eacute;trie de l'esquisse est cr&eacute;&eacute;e doit &ecirc;tre le m&ecirc;me pour toutes les sections. Commencez toutes les sections par la g&eacute;om&eacute;trie int&eacute;rieure, ou commencez-les toutes par la g&eacute;om&eacute;trie ext&eacute;rieure. Sinon, un tuyau non valide sera cr&eacute;&eacute; &agrave; l'endroit o&ugrave; les parois int&eacute;rieures et ext&eacute;rieures se croisent.</li></ul>
-</div>
+<li>Si l'esquisse poss&egrave;de une g&eacute;om&eacute;trie int&eacute;rieure, l'ordre dans lequel la g&eacute;om&eacute;trie de l'esquisse est cr&eacute;&eacute;e doit &ecirc;tre le m&ecirc;me pour toutes les sections. Commencez toutes les sections par la g&eacute;om&eacute;trie int&eacute;rieure, ou commencez-les toutes par la g&eacute;om&eacute;trie ext&eacute;rieure. Sinon, un tuyau non valide sera cr&eacute;&eacute; &agrave; l'endroit o&ugrave; les parois int&eacute;rieures et ext&eacute;rieures se croisent.</li>
+<li>Le message d'erreur &laquo;&nbsp;Une erreur s'est produite lors de la cr&eacute;ation du balayage.&nbsp;&raquo; peut indiquer que l'une de ces conditions n'est pas remplie.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -165,35 +164,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117220833
+Cached time: 20260118094233
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.157 seconds
-Preprocessor visited node count: 716/1000000
+CPU time usage: 0.086 seconds
+Real time usage: 0.122 seconds
+Preprocessor visited node count: 715/1000000
 Post&#8208;expand include size: 22374/2097152 bytes
 Template argument size: 7273/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2254/5000000 bytes
+Unstrip post&#8208;expand size: 2263/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.525      1 -total
- 22.17%    7.210     10 Template:PropertyData
- 19.98%    6.499      1 Template:PartDesign_Tools_navi/fr
- 15.14%    4.924     10 Template:Variable
- 12.26%    3.989      2 Template:Navigation_menu_2
- 11.48%    3.733      5 Template:Emphasis
- 10.56%    3.435      1 Template:Userdocnavi/fr
- 10.31%    3.352      2 Template:Docnav/fr
-  7.77%    2.527      1 Template:GuiCommand/fr
-  7.57%    2.461      6 Template:Button
+100.00%   24.836      1 -total
+ 24.00%    5.961     10 Template:PropertyData
+ 22.09%    5.487      1 Template:PartDesign_Tools_navi/fr
+ 15.28%    3.796      2 Template:Navigation_menu_2
+ 15.11%    3.752     10 Template:Variable
+ 12.01%    2.984      1 Template:Userdocnavi/fr
+ 10.89%    2.704      1 Template:GuiCommand/fr
+ 10.40%    2.582      2 Template:Docnav/fr
+  5.36%    1.330      6 Template:Button
+  4.98%    1.237      5 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:88072-0!canonical and timestamp 20260117220833 and revision id 1739741. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:88072-0!canonical and timestamp 20260118094233 and revision id 1740055. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
