Updated page TechDraw CosmeticEraser/fr

--- a/wiki/fr/TechDraw_CosmeticEraser.html
+++ b/wiki/fr/TechDraw_CosmeticEraser.html
@@ -1,18 +1,16 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw CosmeticEraser/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+CosmeticEraser&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_CosmeticEraser.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw HilfsobjektEntfernen (90% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_CosmeticEraser.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw HilfsobjektEntfernen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_CosmeticEraser.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CosmeticEraser (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_CosmeticEraser.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Rimuovi oggetto cosmetico (30% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_CosmeticEraser.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Usu&#324; geometrie pomocnicze (90% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_CosmeticEraser.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Usu&#324; geometrie pomocnicze (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_CosmeticEraser.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1059;&#1076;&#1072;&#1083;&#1080;&#1090;&#1100; &#1074;&#1089;&#1087;&#1086;&#1084;&#1086;&#1075;&#1072;&#1090;&#1077;&#1083;&#1100;&#1085;&#1099;&#1081; &#1086;&#1073;&#1098;&#1077;&#1082;&#1090;" (40% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDecreaseDecimal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/fr">Moins de d&eacute;cimales</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Quadrants.html" title="TechDraw Quadrants/fr">Sommets quadrants</a></div>
     <div><a href="../fr/TechDraw_LineGroup.html" title="TechDraw LineGroup/fr">Groupe de lignes</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
@@ -113,35 +111,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111151821
+Cached time: 20260118094644
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.067 seconds
-Real time usage: 0.096 seconds
-Preprocessor visited node count: 348/1000000
-Post&#8208;expand include size: 24677/2097152 bytes
-Template argument size: 9607/2097152 bytes
+CPU time usage: 0.087 seconds
+Real time usage: 0.160 seconds
+Preprocessor visited node count: 347/1000000
+Post&#8208;expand include size: 24581/2097152 bytes
+Template argument size: 9543/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1487/5000000 bytes
+Unstrip post&#8208;expand size: 1501/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.862      1 -total
- 22.79%    5.893      1 Template:TechDraw_Tools_navi/fr
- 17.44%    4.510      2 Template:Docnav/fr
- 17.40%    4.501      2 Template:Navigation_menu_2
- 15.30%    3.958      1 Template:Userdocnavi/fr
- 15.17%    3.923      1 Template:GuiCommand/fr
-  9.09%    2.350      1 Template:Version/fr
-  6.42%    1.660      1 Template:MenuCommand
-  6.22%    1.608      1 Template:Button
-  5.23%    1.353      1 Template:KEY
+100.00%   58.619      1 -total
+ 26.32%   15.429      2 Template:Docnav/fr
+ 18.56%   10.879      1 Template:TechDraw_Tools_navi/fr
+ 13.69%    8.022      2 Template:Navigation_menu_2
+ 11.28%    6.614      1 Template:MenuCommand
+ 10.85%    6.363      1 Template:Userdocnavi/fr
+  9.85%    5.776      1 Template:Button
+  8.64%    5.064      1 Template:KEY
+  6.02%    3.527      1 Template:GuiCommand/fr
+  5.26%    3.085      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156760-0!canonical and timestamp 20260111151821 and revision id 1734681. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156760-0!canonical and timestamp 20260118094643 and revision id 1740070. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
