--- a/wiki/fr/TechDraw_CosmeticEraser.html
+++ b/wiki/fr/TechDraw_CosmeticEraser.html
@@ -67,7 +67,7 @@
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDecreaseDecimal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/fr">Moins de d&eacute;cimales</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Quadrants.html" title="TechDraw Quadrants/fr">Sommets quadrants</a></div>
     <div><a href="../fr/TechDraw_LineGroup.html" title="TechDraw LineGroup/fr">Groupe de lignes</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
@@ -111,15 +111,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118094644
+Cached time: 20260118094701
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.160 seconds
+CPU time usage: 0.086 seconds
+Real time usage: 0.116 seconds
 Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 24581/2097152 bytes
-Template argument size: 9543/2097152 bytes
+Post&#8208;expand include size: 24485/2097152 bytes
+Template argument size: 9479/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -127,19 +127,19 @@ Unstrip post&#8208;expand size: 1501/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   58.619      1 -total
- 26.32%   15.429      2 Template:Docnav/fr
- 18.56%   10.879      1 Template:TechDraw_Tools_navi/fr
- 13.69%    8.022      2 Template:Navigation_menu_2
- 11.28%    6.614      1 Template:MenuCommand
- 10.85%    6.363      1 Template:Userdocnavi/fr
-  9.85%    5.776      1 Template:Button
-  8.64%    5.064      1 Template:KEY
-  6.02%    3.527      1 Template:GuiCommand/fr
-  5.26%    3.085      1 Template:Version/fr
+100.00%   31.963      1 -total
+ 28.75%    9.188      1 Template:TechDraw_Tools_navi/fr
+ 23.37%    7.469      2 Template:Navigation_menu_2
+ 19.29%    6.165      1 Template:Userdocnavi/fr
+ 14.19%    4.536      1 Template:GuiCommand/fr
+ 10.06%    3.217      2 Template:Docnav/fr
+  7.79%    2.490      1 Template:Version/fr
+  6.83%    2.183      1 Template:MenuCommand
+  6.83%    2.182      1 Template:Button
+  3.87%    1.238      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156760-0!canonical and timestamp 20260118094643 and revision id 1740070. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156760-0!canonical and timestamp 20260118094701 and revision id 1740072. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
