Created page with ":* [[Image:Face-selection.svg|32px]] [[Part_SelectFilter#Face_Selection|Výběr ploch]]: Umožňuje pouze výběr ploch."

--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -77,7 +77,7 @@
 <ul><li><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Part_SelectFilter.svg&amp;filetimestamp=20240719123546&amp;.html" class="mw-file-description"><img src="../File/Part_SelectFilter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html" title="Part SelectFilter">Filtr v&yacute;b&#283;ru</a>: <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Vertex-selection.svg&amp;filetimestamp=20240704201749&amp;.html" class="mw-file-description"><img src="../File/Vertex-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#Vertex_Selection" title="Part SelectFilter">V&yacute;b&#283;r vrchol&#367;</a>: Umo&#382;&#328;uje v&yacute;b&#283;r pouze vrchol&#367;.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Edge-selection.svg&amp;filetimestamp=20240704192347&amp;.html" class="mw-file-description"><img src="../File/Edge-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#Edge_Selection" title="Part SelectFilter">V&yacute;b&#283;r hran</a>: Umo&#382;&#328;uje vybrat pouze hrany.</li></ul></dd></dl>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Face-selection.svg&amp;filetimestamp=20240704192839&amp;.html" class="mw-file-description"><img src="../File/Face-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#Face_Selection" title="Part SelectFilter">Face Selection</a>: Only allows the selection of faces.</li></ul></dd></dl>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Face-selection.svg&amp;filetimestamp=20240704192839&amp;.html" class="mw-file-description"><img src="../File/Face-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#Face_Selection" title="Part SelectFilter">V&yacute;b&#283;r ploch</a>: Umo&#382;&#328;uje pouze v&yacute;b&#283;r ploch.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Clear-selection.svg&amp;filetimestamp=20240704191440&amp;.html" class="mw-file-description"><img src="../File/Clear-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#No_Selection_Filters" title="Part SelectFilter">No Selection Filters</a>: Allows the selection of all subelements.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_TreeSelectAllInstances.svg&amp;filetimestamp=20200619151800&amp;.html" class="mw-file-description"><img src="../File/Std_TreeSelectAllInstances.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_TreeSelectAllInstances.html" title="Std TreeSelectAllInstances">Select All Instances</a>: Selects all instances of an object in the <a href="../Tree_View.html" title="Tree View">Tree View</a>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_ToggleFreeze.svg&amp;filetimestamp=20240411193839&amp;.html" class="mw-file-description"><img src="../File/Std_ToggleFreeze.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> <a href="../Std_ToggleFreeze.html" title="Std ToggleFreeze">Toggle Freeze</a>: Toggles the freeze state of objects. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
@@ -149,12 +149,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118094716
+Cached time: 20260118094744
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.184 seconds
-Real time usage: 0.289 seconds
+CPU time usage: 0.161 seconds
+Real time usage: 0.274 seconds
 Preprocessor visited node count: 549/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
@@ -165,18 +165,18 @@ Unstrip post&#8208;expand size: 2372/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.439      1 -total
- 38.20%   13.920      1 Template:Std_Base_navi/cs
- 22.00%    8.015      2 Template:Navigation_menu_2
- 19.70%    7.180      1 Template:Userdocnavi/cs
-  9.24%    3.368      2 Template:Docnav
-  8.93%    3.253      6 Template:VersionPlus
-  6.35%    2.314      8 Template:Version
-  5.99%    2.184      1 Template:TOCright
-  5.74%    2.092      1 Template:StdMenu
+100.00%   35.269      1 -total
+ 36.55%   12.890      1 Template:Std_Base_navi/cs
+ 21.72%    7.659      2 Template:Navigation_menu_2
+ 20.48%    7.223      1 Template:Userdocnavi/cs
+ 10.01%    3.532      2 Template:Docnav
+  9.55%    3.368      6 Template:VersionPlus
+  7.34%    2.590      1 Template:TOCright
+  6.89%    2.431      8 Template:Version
+  5.55%    1.959      1 Template:StdMenu
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118094715 and revision id 1740074. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118094744 and revision id 1740076. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
