Updated page TechDraw CosmeticEraser/fr

--- a/wiki/fr/TechDraw_CosmeticEraser.html
+++ b/wiki/fr/TechDraw_CosmeticEraser.html
@@ -15,14 +15,14 @@
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Gomme
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Supprimer un objet cosm&eacute;tique
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Supprimer l'objet cosm&eacute;tique
+<td class="ctEven">TechDraw &rarr; Supprimer un objet cosm&eacute;tique
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -111,15 +111,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118094701
+Cached time: 20260118094852
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.116 seconds
+CPU time usage: 0.077 seconds
+Real time usage: 0.131 seconds
 Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 24485/2097152 bytes
-Template argument size: 9479/2097152 bytes
+Post&#8208;expand include size: 24537/2097152 bytes
+Template argument size: 9531/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -127,19 +127,19 @@ Unstrip post&#8208;expand size: 1501/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.963      1 -total
- 28.75%    9.188      1 Template:TechDraw_Tools_navi/fr
- 23.37%    7.469      2 Template:Navigation_menu_2
- 19.29%    6.165      1 Template:Userdocnavi/fr
- 14.19%    4.536      1 Template:GuiCommand/fr
- 10.06%    3.217      2 Template:Docnav/fr
-  7.79%    2.490      1 Template:Version/fr
-  6.83%    2.183      1 Template:MenuCommand
-  6.83%    2.182      1 Template:Button
-  3.87%    1.238      1 Template:KEY
+100.00%   27.797      1 -total
+ 33.95%    9.438      1 Template:TechDraw_Tools_navi/fr
+ 19.61%    5.452      2 Template:Navigation_menu_2
+ 14.39%    3.999      1 Template:Userdocnavi/fr
+ 11.97%    3.326      1 Template:Version/fr
+ 10.97%    3.048      1 Template:GuiCommand/fr
+  8.98%    2.496      2 Template:Docnav/fr
+  5.86%    1.630      1 Template:KEY
+  5.59%    1.555      1 Template:Button
+  4.77%    1.326      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156760-0!canonical and timestamp 20260118094701 and revision id 1740072. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156760-0!canonical and timestamp 20260118094851 and revision id 1740080. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
